--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                       minlength="6"
                       class="input is-large"
                       type="email"
+                      required
                       placeholder="Tu Correo"
                       autofocus=""
                     />
@@ -52,6 +53,7 @@
                       autocomplete="false"
                       class="input is-large"
                       type="password"
+                      required
                       placeholder="Tu Password"
                     />
                   </div>
